--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,27 @@
     box-sizing: border-box;
 }
 
+.logo{
+    width: 20vw;
+    padding: 15px;
+    min-width: 100px;
+}
+
+
+div.burger-menu {
+    text-align: center;
+}
+
+div.burger-menu i {
+    background-color: #0044AA;
+    border-radius: 5px;
+    color: #FFF;
+    font-size: 20px;
+    height: 40px;
+    margin: 10px 0px 20px 0px;
+    padding: 10px;
+    width: 40px;
+}
 
 main {
     margin: 0 auto;
@@ -38,6 +59,11 @@ main section{
 
 
 @media (min-width: 361px) {
+
+    
+    .burger-menu{
+    display: none;
+    }
 
 }
 
