--- a/views/register.html
+++ b/views/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrate en Digital Travel</title>
+    <title>Registrate - Digital Travel</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
             <div class="container-fluid">
                 <div><a href="/"><img src="images/logoavion.png" alt="Logo Digital Travel" class="logo"></a></div>
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Digital Travel</a>
+                    <a class="navbar-brand" href="/">Digital Travel</a>
                 </div>
                 <ul class="nav navbar-nav">
                     <li><a href="#"><i class="fas fa-plane"></i> Aereos</a></li>
@@ -30,13 +30,9 @@
                     <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
                     <li><a href="#"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
-
                 </ul>
             </div>
         </nav>
-        <div class="burger-menu">
-            <i class="fa fa-bars burger"></i>
-        </div>
     </header>
     <main>
         <section>
