--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,33 +9,46 @@
 }
 
 
-div.burger-menu {
-    text-align: center;
-}
-
-div.burger-menu i {
-    background-color: #0044AA;
-    border-radius: 5px;
-    color: #FFF;
-    font-size: 20px;
-    height: 40px;
-    margin: 10px 0px 20px 0px;
-    padding: 10px;
-    width: 40px;
-}
-
 main {
     margin: 0 auto;
     background-color:rgb(0, 187, 255);
 }
 
+nav.navbar.navbar-inverse{
+    margin-bottom: 0px;
+}
 main section{
     width: 50%;
     margin: auto;
 }
 
+.imagencart{
+    width: 20vw;
+    padding-bottom: 15px;
+    min-width: 200px;
+    border-radius: 5px;
+}
 
-.formregister{
+.formcart article{
+    display: flex;
+    flex-wrap: wrap;
+    width: 150%;
+    min-width: 200px;
+    max-width: 600px;
+
+}
+
+.formcart article p{
+    background-color: rgb(77, 204, 250);
+    border-radius: 10px;
+    padding-left: 10px;
+    width: 150%;
+    min-width: 200px;
+    max-width: 600px;
+}
+
+
+.formregister, .formcart{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,15 +57,17 @@ main section{
 }
 
 
-.formregister input, .formregister button{
-    width: 80%;
+.formregister input, .formregister button, .formcart button{
+    width: 150%;
+    min-width: 200px;
+    max-width: 600px;
     border: none;
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
 }
 
-.formregister button{
+.formregister button, .formcart button{
     color:rgb(46, 45, 45);
     background-color:rgb(121, 205, 250)
 }
@@ -60,14 +75,16 @@ main section{
 
 @media (min-width: 361px) {
 
-    
-    .burger-menu{
-    display: none;
-    }
+
 
 }
 
 @media (min-width: 769px) {
     
+    .formregister button:hover, .formcart button:hover{
+    color: #f0f9fe;
+    background-color:rgb(0, 166, 255);
+
+}
 
 }
