--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,15 +11,42 @@
 
 main {
     margin: 0 auto;
-    background-color:rgb(0, 187, 255);
+    background-color:rgb(167, 203, 216);
 }
 
 nav.navbar.navbar-inverse{
     margin-bottom: 0px;
 }
+
+nav.navbar.navbar-inverse div ul{
+    display: none;
+}
+
+
+ul.burger-menu {
+    text-align: center;
+    background-color: #222;
+    margin-bottom: 0px;
+}
+
+ul.burger-menu i {
+    background-color: #FFF;
+    border-radius: 5px;
+    color: #222;
+    font-size: 20px;
+    height: 40px;
+    margin: 10px 0px 20px 0px;
+    padding: 10px;
+    width: 40px;
+}
+
 main section{
     width: 50%;
     margin: auto;
+}
+
+main section form.formcart h2{
+min-width: 250px;
 }
 
 .imagencart{
@@ -39,7 +66,7 @@ main section{
 }
 
 .formcart article p{
-    background-color: rgb(77, 204, 250);
+    background-color: rgb(143, 177, 189);
     border-radius: 10px;
     padding-left: 10px;
     width: 150%;
@@ -76,7 +103,6 @@ main section{
 @media (min-width: 361px) {
 
 
-
 }
 
 @media (min-width: 769px) {
@@ -86,5 +112,16 @@ main section{
     background-color:rgb(0, 166, 255);
 
 }
+    ul.burger-menu{
+        display: none;
+    }
+
+    nav.navbar.navbar-inverse div ul{
+        display: block;
+    }
+
+    .formcart article p:hover{
+        background-color: rgb(88, 111, 120);
+    }
 
 }
