--- a/views/home.html
+++ b/views/home.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -31,10 +33,26 @@
                     <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
                     <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="/register"><i class="fas fa-user-plus"></i></i></a></li>
-
                 </ul>
             </div>
         </nav>
+        <ul class="burger-menu">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i class="fa fa-bars burger"></i> <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#"><i class="fas fa-plane"></i> Aereos</a></li>
+                    <li><a href="#"><i class="fas fa-hotel"></i> Hoteles</a></li>
+                    <li><a href="#"><i class="fas fa-hiking"></i> Excursiones</a></li>
+                    <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
+                    <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
+                    <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
+                    <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
+                    <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="/register"><i class="fas fa-user-plus"></i></i></a></li>
+                </ul>
+            </li>
+        </ul>
     </header>
     <main>
 
