correcciones varias header cart

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 .logo{
-    width: 20vw;
+    width: 12vw;
     padding: 15px;
     min-width: 100px;
 }
@@ -16,10 +16,12 @@ main {
 
 nav.navbar.navbar-inverse{
     margin-bottom: 0px;
+
 }
 
+
 nav.navbar.navbar-inverse div ul{
-    display: none;
+    display: none
 }
 
 
@@ -118,6 +120,7 @@ min-width: 250px;
 
     nav.navbar.navbar-inverse div ul{
         display: block;
+
     }
 
     .formcart article p:hover{
