avancé un poco con el body del login y del detalle de producto. solo me falta todo lo que sería css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,7 +86,7 @@ min-width: 250px;
 }
 
 
-.formregister input, .formregister button, .formcart button{
+.formregister input, .formregister button, .formcart button, .formlogin button{
     width: 150%;
     min-width: 200px;
     max-width: 600px;
