--- a/views/login.html
+++ b/views/login.html
@@ -2,20 +2,54 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>login</title>
+    <title>Ingresá a tu cuenta</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
+
 <body>
-    <p>
+    <header>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div><a href="/"><img src="images/logoavion.png" alt="Logo Digital Travel" class="logo"></a></div>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Digital Travel</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a href="#"><i class="fas fa-plane"></i> Aereos</a></li>
+                    <li><a href="#"><i class="fas fa-hotel"></i> Hoteles</a></li>
+                    <li><a href="#"><i class="fas fa-hiking"></i> Excursiones</a></li>
+                    <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
+                    <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
+                    <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
+                    <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="burger-menu" align="center">
+            <i class="fa fa-bars burger"></i>
+        </div>
+    </header>
+    <main>
+    <h1 align="center">
         Login
-    </p>
-    <form action="/registro" method="POST">
-<label for="usuario">Usuario:</label>
-<input type="text" name="usuario">
-<label for="contraseña">Contraseña:</label>
-<input type="password" name="contraseña">
-<button type="reset">Borrar</button>
-<button type="submit">Iniciar sesión </button>
-    </form>
+    </h1>
+    <section align="center">
+        <form action="/registro" method="POST">
+         <div>
+             <input type="text" name="usuario" required placeholder="Usuario">
+         </div>
+         <div>   
+             <input type="password" name="contraseña" required placeholder="Contraseña">
+         </div>
+         <button type="submit">Iniciar sesión </button>
+        </form>
+    </section>
 </body>
+</main>
 <footer></footer>
 </html>
