--- a/views/cart.html
+++ b/views/cart.html
@@ -55,7 +55,7 @@
         </ul>
     </header>
     <main>
-        <section>
+        <section class="nicocart">
             <form action="/" method="POST" class="formcart">
                 <h2>Detalle de Compra</h2>
                 <article>
