--- a/views/home.html
+++ b/views/home.html
@@ -54,8 +54,46 @@
             </li>
         </ul>
     </header>
-    <main>
-
+    <main class='homepaisaje'>
+    <section class='busquedas'>
+            <div class='busqueda' action="#" method="GET">
+                    <p>¿A donde quiere ir?</p>
+            </div>
+            <div class='busqueda' action="#" method="GET">
+                <p>¿Cuando quiere viajar?</p>
+            </div>
+    </section> 
+    <section class="ofertasinicio"></section>
+            <div class='propagandas'>
+                <article>
+                    <img src="images/bariloche.jpg" alt="Bariloche" class='imagenofertainicio'>
+                        <div class='descofertainicio'>
+                            <h3>Baroliche</h3>
+                            <p>Visita una de las ciudades mas lindas de Argenitna</p>
+                            <p>10% off en vuelos y hoteles</p>
+                            <p></p>
+                        </div>
+                </article>
+                <article>
+                    <img src="images/hotelpresidente.jpg" alt="Hotelpresidente" class='imagenofertainicio'>
+                        <div class='descofertainicio'>
+                            <h3>Hotel Presidente</h3>
+                            <p>Alojate en este increible hotel</p>
+                            <p>20% off</p>
+                            <p>$5000 /Noche</p>
+                        </div>
+                </article>
+                <article>
+                    <img src="images/avionvolando.jpg" alt="Avion" class='imagenofertainicio'>
+                        <div class='descofertainicio'>
+                            <h3>DIGITAL Airlines</h3>
+                            <p>Vola tranquilo</p>
+                            <p>20% off</p>
+                            <p></p>
+                        </div>
+                </article>
+            </div>
+        </section>
     </main>
     <footer>
 
