--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,10 +8,46 @@
     min-width: 100px;
 }
 
-
 main {
     margin: 0 auto;
     background-color:rgb(167, 203, 216);
+}
+
+main section{
+    width: 50%;
+    margin: auto;
+}
+
+main.homepaisaje {
+    background-image: url('/images/paisajefondo.jpg');
+    background-size: cover;
+    height: 1000px;
+    width: 100%;
+
+}
+
+main .busquedas {
+    display:flex;
+    justify-content: space-around;
+}
+
+
+
+.busqueda{
+    display: flex;
+    justify-content: space-between;
+    justify-content: center;
+    width: 50%;
+    background-color: #FFF;
+    border: 1px solid #000;
+    padding: 2px;
+}
+
+main .ofertasinicio{
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    background-color: #FFF;
 }
 
 nav.navbar.navbar-inverse{
@@ -42,14 +78,11 @@ ul.burger-menu i {
     width: 40px;
 }
 
-main section{
-    width: 50%;
-    margin: auto;
-}
 
 main section form.formcart h2{
 min-width: 250px;
 }
+
 
 .imagencart{
     width: 20vw;
@@ -101,13 +134,13 @@ min-width: 250px;
     background-color:rgb(121, 205, 250)
 }
 
-
 @media (min-width: 361px) {
 
 
 }
 
 @media (min-width: 769px) {
+
     
     .formregister button:hover, .formcart button:hover{
     color: #f0f9fe;
@@ -128,3 +161,6 @@ min-width: 250px;
     }
 
 }
+
+
+
