--- a/views/home.html
+++ b/views/home.html
@@ -54,21 +54,22 @@
             </li>
         </ul>
     </header>
-    <main class='homepaisaje'>
-    <section class='busquedas'>
+    <main>
+     <div class='homepaisaje'>
+        <section class='busquedas'>
             <div class='busqueda' action="#" method="GET">
                     <p>¿A donde quiere ir?</p>
             </div>
             <div class='busqueda' action="#" method="GET">
                 <p>¿Cuando quiere viajar?</p>
             </div>
-    </section> 
-    <section class="ofertasinicio"></section>
+        </section> 
+        <section class="ofertasinicio"></section>
             <div class='propagandas'>
                 <article>
                     <img src="images/bariloche.jpg" alt="Bariloche" class='imagenofertainicio'>
                         <div class='descofertainicio'>
-                            <h3>Baroliche</h3>
+                            <h3><a href='#'>Baroliche</a></h3>
                             <p>Visita una de las ciudades mas lindas de Argenitna</p>
                             <p>10% off en vuelos y hoteles</p>
                             <p></p>
@@ -77,7 +78,7 @@
                 <article>
                     <img src="images/hotelpresidente.jpg" alt="Hotelpresidente" class='imagenofertainicio'>
                         <div class='descofertainicio'>
-                            <h3>Hotel Presidente</h3>
+                            <h3><a href='#'>Hotel Presidente</a></h3>
                             <p>Alojate en este increible hotel</p>
                             <p>20% off</p>
                             <p>$5000 /Noche</p>
@@ -86,7 +87,7 @@
                 <article>
                     <img src="images/avionvolando.jpg" alt="Avion" class='imagenofertainicio'>
                         <div class='descofertainicio'>
-                            <h3>DIGITAL Airlines</h3>
+                            <h3><a href='#'>DIGITAL Airlines</a></h3>
                             <p>Vola tranquilo</p>
                             <p>20% off</p>
                             <p></p>
@@ -94,8 +95,30 @@
                 </article>
             </div>
         </section>
+        </div>
     </main>
     <footer>
+        <section>
+            <div>
+                <i class="fas fa-envelope-open-text"></i>
+                <h3>Contacto</h3>
+                <p>Correo: info@digitaltravel.com</p>
+                <p>Telefono: 5263-9691</p>
+            </div>
+            <div>
+                <i class="far fa-address-card"></i>
+                <h3><a href='#''>Sobre Nosotros</a></h3>
+                <p>Enterate un poco de nuestra historia y porque somos lideres en el mercado
+                </p>
+            </div>
+            <div>
+                <i class="fab fa-cc-visa"></i>
+                <h3><a href='#'>Formas de Pago</a></h3>
+                <p>Aprovecha los increibles descuentos que tenemos con Visa y Amex
+                </p>
+            </div>
+        </section>
+
 
     </footer>
 
