--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,19 +18,12 @@ main section{
     margin: auto;
 }
 
-main.homepaisaje {
+.homepaisaje {
     background-image: url('/images/paisajefondo.jpg');
+    width: 80%;
     background-size: cover;
-    height: 1000px;
-    width: 100%;
-
+   
 }
-
-main .busquedas {
-    display:flex;
-    justify-content: space-around;
-}
-
 
 
 .busqueda{
@@ -38,7 +31,7 @@ main .busquedas {
     justify-content: space-between;
     justify-content: center;
     width: 50%;
-    background-color: #FFF;
+    background-color: #FFF;s
     border: 1px solid #000;
     padding: 2px;
 }
@@ -49,6 +42,12 @@ main .ofertasinicio{
     justify-content: space-between;
     background-color: #FFF;
 }
+
+.imagenofertainicio{
+    width: 20vw;
+    padding-bottom: 15px;
+}
+
 
 nav.navbar.navbar-inverse{
     margin-bottom: 0px;
@@ -133,6 +132,37 @@ min-width: 250px;
     color:rgb(46, 45, 45);
     background-color:rgb(121, 205, 250)
 }
+
+footer section{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #222;
+}
+
+footer section div {
+    text-align: center;
+    padding: 20px;
+    color: #666;
+    width: 30%;
+}
+
+/* Cuando paso el cursor por el DIV, debo cambiar el color del ICONO */
+
+footer section div h3 {
+    margin-bottom: 0px;
+}
+
+footer section div p {
+    margin-top: 0px;
+}
+
+.icono-footer {
+    color: #1259c3;
+    font-size: 2em;
+    padding-bottom: 10px;
+}
+
 
 @media (min-width: 361px) {
 
