--- a/views/cart.html
+++ b/views/cart.html
@@ -80,6 +80,27 @@
         </section>
     </main>
     <footer>
+        <section>
+            <div>
+                <i class="fas fa-envelope-open-text"></i>
+                <h3>Contacto</h3>
+                <p>Correo: info@digitaltravel.com</p>
+                <p>Telefono: 5263-9691</p>
+            </div>
+            <div>
+                <i class="far fa-address-card"></i>
+                <h3><a href='#''>Sobre Nosotros</a></h3>
+                <p>Enterate un poco de nuestra historia y porque somos lideres en el mercado
+                </p>
+            </div>
+            <div>
+                <i class="fab fa-cc-visa"></i>
+                <h3><a href='#'>Formas de Pago</a></h3>
+                <p>Aprovecha los increibles descuentos que tenemos con Visa y Amex
+                </p>
+            </div>
+        </section>
+
 
     </footer>
 
