--- a/views/home.html
+++ b/views/home.html
@@ -55,46 +55,45 @@
         </ul>
     </header>
     <main>
-     <div class='homepaisaje'>
-        <section class='busquedas'>
-            <div class='busqueda' action="#" method="GET">
-                    <p>¿A donde quiere ir?</p>
-            </div>
-            <div class='busqueda' action="#" method="GET">
-                <p>¿Cuando quiere viajar?</p>
-            </div>
-        </section> 
-        <section class="ofertasinicio"></section>
+        <div class='homepaisaje'>
+            <section class='busquedas'>
+                <form action="/" method="POST">
+                    <input type="text" name="destino" required placeholder="¿A donde quiere ir?">
+                    <label for="date">¿Cuando quiere viajar?</label>
+                    <input type="date" name="date" required placeholder="¿Cuando quiere viajar?">
+                </form>
+            </section>
+            <section class="ofertasinicio"></section>
             <div class='propagandas'>
                 <article>
                     <img src="images/bariloche.jpg" alt="Bariloche" class='imagenofertainicio'>
-                        <div class='descofertainicio'>
-                            <h3><a href='#'>Baroliche</a></h3>
-                            <p>Visita una de las ciudades mas lindas de Argenitna</p>
-                            <p>10% off en vuelos y hoteles</p>
-                            <p></p>
-                        </div>
+                    <div class='descofertainicio'>
+                        <h3><a href='#'>Baroliche</a></h3>
+                        <p>Visita una de las ciudades mas lindas de Argenitna</p>
+                        <p>10% off en vuelos y hoteles</p>
+                        <p></p>
+                    </div>
                 </article>
                 <article>
                     <img src="images/hotelpresidente.jpg" alt="Hotelpresidente" class='imagenofertainicio'>
-                        <div class='descofertainicio'>
-                            <h3><a href='#'>Hotel Presidente</a></h3>
-                            <p>Alojate en este increible hotel</p>
-                            <p>20% off</p>
-                            <p>$5000 /Noche</p>
-                        </div>
+                    <div class='descofertainicio'>
+                        <h3><a href='#'>Hotel Presidente</a></h3>
+                        <p>Alojate en este increible hotel</p>
+                        <p>20% off</p>
+                        <p>$5000 /Noche</p>
+                    </div>
                 </article>
                 <article>
                     <img src="images/avionvolando.jpg" alt="Avion" class='imagenofertainicio'>
-                        <div class='descofertainicio'>
-                            <h3><a href='#'>DIGITAL Airlines</a></h3>
-                            <p>Vola tranquilo</p>
-                            <p>20% off</p>
-                            <p></p>
-                        </div>
+                    <div class='descofertainicio'>
+                        <h3><a href='#'>DIGITAL Airlines</a></h3>
+                        <p>Vola tranquilo</p>
+                        <p>20% off</p>
+                        <p></p>
+                    </div>
                 </article>
             </div>
-        </section>
+            </section>
         </div>
     </main>
     <footer>
@@ -113,7 +112,7 @@
             </div>
             <div>
                 <i class="fab fa-cc-visa"></i>
-                <h3><a href='#'>Formas de Pago</a></h3>
+                <h3><a href=' #'>Formas de Pago</a></h3>
                 <p>Aprovecha los increibles descuentos que tenemos con Visa y Amex
                 </p>
             </div>
