--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Detalle del producto</title>
@@ -13,45 +14,46 @@
 </head>
 
 <header>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div><a href="/"><img src="images/logoavion.png" alt="Logo Digital Travel" class="logo"></a></div>
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Digital Travel</a>
-                </div>
-                <ul class="nav navbar-nav">
-                    <li><a href="#"><i class="fas fa-plane"></i> Aereos</a></li>
-                    <li><a href="#"><i class="fas fa-hotel"></i> Hoteles</a></li>
-                    <li><a href="#"><i class="fas fa-hiking"></i> Excursiones</a></li>
-                    <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
-                    <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
-                    <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
-                    <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
-                    <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
-                </ul>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div><a href="/"><img src="images/logoavion.png" alt="Logo Digital Travel" class="logo"></a></div>
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Digital Travel</a>
             </div>
-        </nav>
+            <ul class="nav navbar-nav">
+                <li><a href="#"><i class="fas fa-plane"></i> Aereos</a></li>
+                <li><a href="#"><i class="fas fa-hotel"></i> Hoteles</a></li>
+                <li><a href="#"><i class="fas fa-hiking"></i> Excursiones</a></li>
+                <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
+                <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
+                <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
+                <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
+        </div>
+    </nav>
 </header>
 <main>
-<body>
- <div class="flex-container">
-     <section>
-     <img width="280" src="images/maldivas.jpg" alt="Foto de las Maldivas">
-     </section>
 
- <section>
- <h1 class="tituloProduct">
-     Producto
- </h1>
- <p>
-      Acá va la descripción del producto.
- </p>
- <section class="precioProduct">Precio final</section>
- </section>
- </div>
-</body>
+    <body>
+        <div class="flex-container">
+            <section>
+                <img src="images/maldivas.jpg" alt="Foto de las Maldivas">
+
+            </section>
+
+            <section class="flex-container">
+                <h1 class="tituloProduct">
+                    Producto
+                </h1>
+                <p>
+                    Acá va la descripción del producto.
+                </p>
+                <section class="precioProduct">Precio final</section>
+            </section>
+        </div>
+    </body>
 </main>
-<<<<<<< HEAD
 <footer>
     <section>
         <div>
@@ -68,7 +70,7 @@
         </div>
         <div>
             <i class="fab fa-cc-visa"></i>
-            <h3><a href='#'>Formas de Pago</a></h3>
+            <h3><a href=' #'>Formas de Pago</a></h3>
             <p>Aprovecha los increibles descuentos que tenemos con Visa y Amex
             </p>
         </div>
@@ -76,8 +78,5 @@
 
 
 </footer>
-=======
 
-<footer></footer>
->>>>>>> 8fb01c8d41c7317abe8658906a7c9cd378c970a6
 </html>
