--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,12 +8,7 @@
     min-width: 100px;
 }
 
-<<<<<<< HEAD
 main {
-=======
-
-main{
->>>>>>> 8fb01c8d41c7317abe8658906a7c9cd378c970a6
     margin: 0 auto;
     background-color:rgb(167, 203, 216);
 }
@@ -36,9 +31,10 @@ main section{
     justify-content: space-between;
     justify-content: center;
     width: 50%;
-    background-color: #FFF;s
+    background-color: #FFF;
     border: 1px solid #000;
     padding: 2px;
+
 }
 
 main .ofertasinicio{
@@ -138,6 +134,15 @@ min-width: 250px;
     background-color:rgb(121, 205, 250)
 }
 
+.flex-container {
+    display: flex;
+    flex-direction:row;
+    padding: 10px;
+    border: 2px black;
+    flex-flow: row;
+}
+
+
 footer section{
     display: flex;
     flex-direction: row;
@@ -176,7 +181,6 @@ footer section div p {
 
 @media (min-width: 769px) {
 
-    
     .formregister button:hover, .formcart button:hover{
     color: #f0f9fe;
     background-color:rgb(0, 166, 255);
@@ -198,18 +202,7 @@ footer section div p {
 
 }
 
-.flex-container {
-    display: flex;
-    flex-direction:row;
-    padding: 10px;
-    border: 2px black;
-    flex-flow: row;
-}
-
-<<<<<<< HEAD
-}
 
 
 
-=======
->>>>>>> 8fb01c8d41c7317abe8658906a7c9cd378c970a6
+
