--- a/views/home.html
+++ b/views/home.html
@@ -61,6 +61,8 @@
                     <input type="text" name="destino" required placeholder="¿A donde quiere ir?">
                     <label for="date">¿Cuando quiere viajar?</label>
                     <input type="date" name="date" required placeholder="¿Cuando quiere viajar?">
+                    <label for="date">Regreso</label>
+                    <input type="date" name="date" required placeholder="Regreso">
                 </form>
             </section>
             <section class="ofertasinicio"></section>
