--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,24 +18,42 @@ main section{
     margin: auto;
 }
 
-.homepaisaje {
+/* .homepaisaje {
     background-image: url('/images/paisajefondo.jpg');
     width: 80%;
     background-size: cover;
    
-}
+}*/
 
-
-.busqueda{
+.busquedas {
+    padding: 30px;
     display: flex;
-    justify-content: space-between;
-    justify-content: center;
-    width: 50%;
-    background-color: #FFF;
-    border: 1px solid #000;
-    padding: 2px;
+    flex-wrap: nowrap;
+}
+.propagandas article {
+    margin: auto;
+    text-align: center;
 
 }
+
+
+.imagenofertainicio{
+    width: 40%;
+    border-radius: 5px;
+    margin:auto;
+
+
+}
+
+.descofertainicio {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    position: relative;
+    padding: 15px;
+}
+
 
 main .ofertasinicio{
     display: flex;
@@ -44,10 +62,6 @@ main .ofertasinicio{
     background-color: #FFF;
 }
 
-.imagenofertainicio{
-    width: 20vw;
-    padding-bottom: 15px;
-}
 
 
 nav.navbar.navbar-inverse{
@@ -198,6 +212,17 @@ footer section div p {
     .formcart article p:hover{
         background-color: rgb(88, 111, 120);
         width: 100%;
+        }
+   .descofertainicio {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+    .descofertainicio article:hover {
+            box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    
         }
 
 }
