--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -176,7 +176,7 @@ footer section div p {
 .icono-footer {
     color: #1259c3;
     font-size: 2em;
-    padding-bottom: 10px;
+    padding-bottom: 1""0px;
 }
 
 
