hice el login y el product detail responsive

--- a/views/login.html
+++ b/views/login.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ingresá a tu cuenta</title>
+    <title>Detalle del producto</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap" rel="stylesheet">
 </head>
@@ -60,7 +61,7 @@
             Login
         </h1>
         <section>
-            <form action="/registro" method="POST">
+            <form action="/registro" method="POST" class="loginForm">
                 <input type="text" name="usuario" required placeholder="Usuario">
                 <input type="password" name="contraseña" required placeholder="Contraseña">
                 <button type="submit">Iniciar sesión </button>
