--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -149,19 +149,25 @@ min-width: 250px;
 }
 
 .flex-container {
+    flex-direction: column;
     display: flex;
     padding: 10px;
-    border: 2px black;
-    flex-flow: row;
 }
 
 
 .flex-container-2  { 
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
+   justify-content:space-between;
 }
 
+.textoProduct{
+    text-align: justify;
+}
+
+.loginForm{
+    width: 50%;
+}
 
 footer section{
     display: flex;
@@ -233,7 +239,17 @@ footer section div p {
 
 }
 
-
+@media (min-width:769px){
+    .flex-container {
+        display: flex;
+        padding: 50px;
+        border: 2px black;
+        flex-flow: row;
+    }
+    .flex-container section img{
+      width: 400px;  
+    }
+}
 
 
 
