--- a/views/register.html
+++ b/views/register.html
@@ -30,7 +30,7 @@
                     <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
                     <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
                     <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
-                    <li><a href="#"><i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
             </div>
@@ -83,7 +83,7 @@
             </div>
             <div>
                 <i class="fab fa-cc-visa"></i>
-                <h3><a href='#'>Formas de Pago</a></h3>
+                <h3><a href=' #'>Formas de Pago</a></h3>
                 <p>Aprovecha los increibles descuentos que tenemos con Visa y Amex
                 </p>
             </div>
