--- a/views/login.html
+++ b/views/login.html
@@ -29,7 +29,7 @@
                     <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
                     <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
                     <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
-                    <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="/register"><i class="fas fa-user-plus"></i></i></a></li>
                     <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
             </div>
