--- a/views/register.html
+++ b/views/register.html
@@ -30,8 +30,9 @@
                     <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
                     <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
                     <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
-                    <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
+                    <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="/register"><i class="fas fa-user-plus"></i></i></a></li>
                 </ul>
             </div>
         </nav>
@@ -48,13 +49,14 @@
                     <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
                     <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
                     <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="/register"><i class="fas fa-user-plus"></i></i></a></li>
                 </ul>
             </li>
         </ul>
     </header>
     <main>
         <section>
-            <form action="/" method="POST" class="formregister">
+            <form action="/" method="POST" class="form">
                 <h3>Registrate</h3>
                 <input type="text" name="name" required placeholder="Nombre y Apellido">
                 <input type="text" name="passport" required placeholder="Número de Pasaporte">
