--- a/views/login.html
+++ b/views/login.html
@@ -56,42 +56,42 @@
                 </li>
             </ul>
         </header>
-        <main class="formLogin">
-            <h1 align="center">
-                Login
-            </h1>
+        <main>
             <section>
-                <form action="/registro" method="POST" class="loginForm">
+                <form action="/registro" method="POST" class="form">
+                    <h3>Login</h3>
                     <input type="text" name="usuario" required placeholder="Usuario">
                     <input type="password" name="contraseña" required placeholder="Contraseña">
                     <button type="submit">Iniciar sesión </button>
                 </form>
             </section>
-</body>
-</main>
-<footer>
-    <section>
-        <div>
-            <i class="fas fa-envelope-open-text"></i>
-            <h3>Contacto</h3>
-            <p>Correo: info@digitaltravel.com</p>
-            <p>Telefono: 5263-9691</p>
-        </div>
-        <div>
-            <i class="far fa-address-card"></i>
-            <h3><a href='#''>Sobre Nosotros</a></h3>
+        </main>
+
+
+        <footer>
+            <section>
+                <div>
+                    <i class="fas fa-envelope-open-text"></i>
+                    <h3>Contacto</h3>
+                    <p>Correo: info@digitaltravel.com</p>
+                    <p>Telefono: 5263-9691</p>
+                </div>
+                <div>
+                    <i class="far fa-address-card"></i>
+                    <h3><a href='#''>Sobre Nosotros</a></h3>
             <p>Enterate un poco de nuestra historia y porque somos lideres en el mercado
             </p>
         </div>
         <div>
             <i class="fab fa-cc-visa"></i>
             <h3><a href=' #'>Formas de Pago</a></h3>
-            <p>Aprovecha los increibles descuentos que tenemos con Visa y Amex
-            </p>
-        </div>
-    </section>
+                    <p>Aprovecha los increibles descuentos que tenemos con Visa y Amex
+                    </p>
+                </div>
+            </section>
 
 
-</footer>
+        </footer>
+</body>
 
 </html>
