--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -64,24 +64,38 @@
             </section>
 
             <section class="flex-container-2">
-                <div> <h2>
-                    Producto
-                </h2></div>
-                <div class="textoProduct">El Sandy Heaven Maldives ofrece conexión WiFi gratuita y se encuentra en el atolón Malé Sur, a solo 30 minutos en lancha rápida del aeropuerto internacional de Velana. También cuenta con recepción 24 horas y restaurante. El hotel cuenta con una zona de playa privada.
+                <div>
+                    <h2>
+                        Producto
+                    </h2>
+                </div>
+                <div class="textoProduct">El Sandy Heaven Maldives ofrece conexión WiFi gratuita y se encuentra en el
+                    atolón Malé Sur, a solo 30 minutos en lancha rápida del aeropuerto internacional de Velana. También
+                    cuenta con recepción 24 horas y restaurante. El hotel cuenta con una zona de playa privada.
 
-                    Las habitaciones del hotel Sandy heaven muestran las tradiciones de diseños arquitectónicos de las Maldivas. Todas las habitaciones del hotel están equipadas con TV de pantalla plana. Todas las habitaciones disponen de baño privado con artículos de aseo gratuitos, mientras que algunas ofrecen vistas a la ciudad.
-                    
-                    El Sandy Heaven Maldives sirve un desayuno continental. El hotel alberga el restaurante Fulhoi. También se ofrecen comidas privadas.
-                    
-                    El alojamiento se encuentra a 1,1 km de la ciudad de Malé y a 600 metros de Maafushi. El aeropuerto más cercano es el aeropuerto internacional de Malé, ubicado a 1,6 km del Sandy Heaven Maldives.
-                    
+                    Las habitaciones del hotel Sandy heaven muestran las tradiciones de diseños arquitectónicos de las
+                    Maldivas. Todas las habitaciones del hotel están equipadas con TV de pantalla plana. Todas las
+                    habitaciones disponen de baño privado con artículos de aseo gratuitos, mientras que algunas ofrecen
+                    vistas a la ciudad.
+
+                    El Sandy Heaven Maldives sirve un desayuno continental. El hotel alberga el restaurante Fulhoi.
+                    También se ofrecen comidas privadas.
+
+                    El alojamiento se encuentra a 1,1 km de la ciudad de Malé y a 600 metros de Maafushi. El aeropuerto
+                    más cercano es el aeropuerto internacional de Malé, ubicado a 1,6 km del Sandy Heaven Maldives.
+
                     A las parejas les encanta la ubicación — Le han puesto un 9,6 para viajes de dos personas.
-                
+
                 </div>
                 <div>
-                 fecha: 20 de enero al 1 de febrero
+                    fecha: 20 de enero al 1 de febrero
                 </div>
                 <div class="precioProduct">Precio final: 4000usd</div>
+                <div>
+                    <form action="/cart" method="POST" class="formregister">
+                        <button type="submit">Agregar al carrito</button>
+                    </form>
+                </div>
             </section>
         </div>
     </body>
