--- a/views/home.html
+++ b/views/home.html
@@ -68,19 +68,23 @@
                     <button type="submit">Buscar</button>
                 </form>
             </section>
-            <section class="ofertasinicio"></section>
             <div class='propagandas'>
                 <article>
-                    <img src="images/bariloche.jpg" alt="Bariloche" class='imagenofertainicio'>
+                    <div class="imagebox">
+                        <img src="images/bariloche.jpg" alt="Bariloche" class='imagenofertainicio'>
+                    </div>
+
                     <div class='descofertainicio'>
                         <h3><a href='#'>Baroliche</a></h3>
-                        <p>Visita una de las ciudades mas lindas de Argenitna</p>
+                        <p>Visita una de las ciudades mas lindas de Argentina</p>
                         <p>10% off en vuelos y hoteles</p>
-                        <p></p>
                     </div>
                 </article>
                 <article>
-                    <img src="images/hotelpresidente.jpg" alt="Hotelpresidente" class='imagenofertainicio'>
+                    <div class="imagebox">
+                        <img src="images/hotelpresidente.jpg" alt="Hotelpresidente" class='imagenofertainicio'>
+                    </div>
+
                     <div class='descofertainicio'>
                         <h3><a href='#'>Hotel Presidente</a></h3>
                         <p>Alojate en este increible hotel</p>
@@ -89,7 +93,10 @@
                     </div>
                 </article>
                 <article>
-                    <img src="images/avionvolando.jpg" alt="Avion" class='imagenofertainicio'>
+                    <div class="imagebox">
+                        <img src="images/avionvolando.jpg" alt="Avion" class='imagenofertainicio'>
+                    </div>
+
                     <div class='descofertainicio'>
                         <h3><a href='#'>DIGITAL Airlines</a></h3>
                         <p>Vola tranquilo</p>
