--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,7 @@
 
 main {
     margin: 0 auto;
-    background-color:rgb(254, 224, 161);
+    background-color:rgba(241, 240, 238, 0.899);
 }
 
 main section{
@@ -44,8 +44,12 @@ margin: 5px;
 
 
 .propagandas article {
-    margin: auto;
+    margin: 30px;
     text-align: center;
+    background-color: white;
+    border-radius: 5px;
+    border: solid 1px;
+    padding: 15px;
 
 }
 
