--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -214,6 +214,12 @@ footer section div p {
     padding-bottom: 1""0px;
 }
 
+.tituloEdicion {
+    padding: 10px;
+    font-family: 'Roboto';
+    text-align: center;
+    display: flex;
+}
 
 @media (min-width: 361px) {
 
